website done. Instead of projects, I did my pets for images.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="style/index.css" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <h1>Damon Allen</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+    </header>
+    <section class="summary">
+        <img src="images/display.png">
+        <div class="aboutme">
+            <h2>Damon Allen</h2>
+            <button><a href="projects.html">My Projects</a></button>
+            <p>So far in this coding journey, I feel I understand Javascript more than HTML and CSS. But working at it
+                will help me better understand how they all work together to make great websites</p>
+        </div>
+    </section>
+    <section>
+        <div class="pets">
+            <div class="desription">
+            <img src="images/BabyShaggy.png">
+            <p>My cat shaggy</p>
+        </div>
+        <div class="desription">
+            <img src="images/Foxy.png">
+            <p>My dog foxy</p>
+        </div>
+        <div class="desription">
+            <img src="images/Foxypink.png">
+            <p>Foxy after groom</p>
+        </div>
+        <div class="desription">
+            <img src="images/happyspike.png">
+            <p>Friend's lizard spike</p>
+        </div>
+        <div class="desription">
+            <img src="images/Scooby.png">
+            <p>My cat scooby</p>
+        </div>
+        <div class="desription">
+            <img src="images/Shaggy.png">
+            <p>Shaggy sleeping</p>
+        </div>
+        <div class="desription">
+            <img src="images/Sophie.png">
+            <p>My dog sophie</p>
+        </div>
+        <div class="desription">
+            <img src="images/Spike.png">
+            <p>Another spike image</p>
+        </div>
+    </section>
+    <footer>
+        <h2>Like what you see?</h2>
+        <button><a href="contact.html">Contact Me</a></button>
+    </footer>
 </body>
+
 </html>
